--- a/services/mobileDistriTV/config.properties
+++ b/services/mobileDistriTV/config.properties
@@ -21,3 +21,11 @@ anticipation_days=7;15;30
 
 # If the use of external storage is enabled
 external_storage_enabled=true
+
+# Text content settings, colors in HEXA
+text_content_color=#2A5C57
+text_content_background_color=#E8E8E8
+
+# Alert text settings, colors in HEXA
+alert_text_color=#be4d25
+alert_background_color=#E8E8E8
