--- a/services/mobileDistriTV/app/src/main/AndroidManifest.xml
+++ b/services/mobileDistriTV/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:label="@string/app_name"
         android:logo="@mipmap/banner"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MobileDistriTV"
+        android:theme="@style/Theme.DistriTV"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true">
 
