--- a/.github/workflows/test_and_prod_deploy.yml
+++ b/.github/workflows/test_and_prod_deploy.yml
@@ -17,27 +17,8 @@ jobs:
     - name: Create .env
       run: cp .env.example .env
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Build backend api
-      uses: docker/build-push-action@v4
-      with:
-        push: false
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/distritv-api:latest,${{ secrets.DOCKERHUB_USERNAME }}/distritv-api:${{ github.sha }}
-        file: Dockerfile.production
-        context: "{{defaultContext}}:services/api"
-
-    - name: Build frontend
-      uses: docker/build-push-action@v4
-      with:
-        push: false
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/distritv-dashboard:latest,${{ secrets.DOCKERHUB_USERNAME }}/distritv-dashboard:${{ github.sha }}
-        file: Dockerfile.production
-        context: "{{defaultContext}}:services/dashboard"
-
     - name: Start containers
-      run: docker-compose up -d -f "docker-compose.prod.yml"
+      run: docker-compose -f "docker-compose.prod.yml" up -d
 
     - name: Install node
       uses: actions/setup-node@v1
@@ -57,7 +38,7 @@ jobs:
 
     - name: Stop containers
       if: always()
-      run: docker-compose -f "docker-compose.prod.yml" down
+      run: docker-compose -f "docker-compose.prod.yml" down -v
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -68,7 +49,7 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Push backend
+    - name: Build and push backend
       uses: docker/build-push-action@v4
       with:
         push: true
@@ -76,7 +57,7 @@ jobs:
         file: Dockerfile.production
         context: "{{defaultContext}}:services/api"
 
-    - name: Push frontend
+    - name: Build and push frontend
       uses: docker/build-push-action@v4
       with:
         push: true
