--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -77,15 +77,10 @@ services:
       - uploaded_assets:${PATH_TO_UPLOAD_FILES}
     networks:
       - backend_net
+    ports:
+      - "${API_PORT}:${API_PORT}"
     deploy:
-      replicas: 4
-      resources:
-        limits:
-          cpus: '2.00'
-          memory: 4096M
-        reservations:
-          cpus: '1.00'
-          memory: 1024M
+      replicas: 1
 
   dashboard:
     image: ${DOCKER_OWNER}/${PROJECT_NAME}-dashboard
