--- a/services/mobileDistriTV/config.properties
+++ b/services/mobileDistriTV/config.properties
@@ -29,3 +29,6 @@ text_content_background_color=#E8E8E8
 # Alert text settings, colors in HEXA
 alert_text_color=#be4d25
 alert_background_color=#E8E8E8
+
+# Maximum amount of errors to send to the server
+max_error_list=30
