--- a/.github/workflows/test_and_prod_deploy.yml
+++ b/.github/workflows/test_and_prod_deploy.yml
@@ -12,16 +12,45 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Create .env
       run: cp .env.example .env
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build backend
+      uses: docker/build-push-action@v4
+      with:
+        push: false
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}-api:latest,${{ secrets.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}-api:${{ github.sha }}
+        file: Dockerfile.production
+        context: "{{defaultContext}}:services/api"
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+    - name: Build frontend
+      uses: docker/build-push-action@v4
+      with:
+        push: false
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}-dashboard:latest,${{ secrets.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}-dashboard:${{ github.sha }}
+        file: Dockerfile.production
+        context: "{{defaultContext}}:services/api"
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
     - name: Start backend services
-      run: docker-compose -f "docker-compose.prod.yml" up -d db cache api
+      run: docker-compose -f "docker-compose.test.yml" up -d db cache api
 
     - name: Start frontend and proxy
-      run: docker-compose -f "docker-compose.prod.yml" up -d
+      run: docker-compose -f "docker-compose.test.yml" up -d
 
     - name: Install node
       uses: actions/setup-node@v1
@@ -41,32 +70,27 @@ jobs:
 
     - name: Stop containers
       if: always()
-      run: docker-compose -f "docker-compose.prod.yml" down -v
+      run: docker-compose -f "docker-compose.test.yml" down -v
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Build and push backend
+    - name: Push backend
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/distritv-api:latest,${{ secrets.DOCKERHUB_USERNAME }}/distritv-api:${{ github.sha }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}-api:latest,${{ secrets.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}-api:${{ github.sha }}
         file: Dockerfile.production
         context: "{{defaultContext}}:services/api"
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
-    - name: Build and push frontend
+    - name: Push frontend
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/distritv-dashboard:latest,${{ secrets.DOCKERHUB_USERNAME }}/distritv-dashboard:${{ github.sha }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}-dashboard:latest,${{ secrets.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}-dashboard:${{ github.sha }}
         file: Dockerfile.production
         context: "{{defaultContext}}:services/api"
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
 
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v0.1.10
@@ -76,4 +100,4 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: ${{ secrets.SERVER_SSH_PORT }}
         script: |
-          cd ${{ env.SERVER_PROJECT_DIR }} && docker compose up -f docker-compose.prod.yml up -d --build --force-recreate
+          cd ${{ env.SERVER_PROJECT_DIR }} && docker compose -f docker-compose.prod.yml up -d --build --force-recreate
