--- a/.github/workflows/test_and_prod_deploy.yml
+++ b/.github/workflows/test_and_prod_deploy.yml
@@ -100,4 +100,4 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: ${{ secrets.SERVER_SSH_PORT }}
         script: |
-          cd ${{ env.SERVER_PROJECT_DIR }} && docker compose -f docker-compose.prod.yml up -d --build --force-recreate
+          cd /home/liveonit/projects/distritv && docker compose -f docker-compose.prod.yml up -d --build --force-recreate
