--- a/.github/workflows/test_and_prod_deploy.yml
+++ b/.github/workflows/test_and_prod_deploy.yml
@@ -94,12 +94,10 @@ jobs:
 
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v0.1.10
-      env:
-        SERVER_PROJECT_DIR: ${{ env.SERVER_PROJECT_DIR }}
       with:
         host: ${{ secrets.SERVER_SSH_HOST }}
         username: ${{ secrets.SERVER_SSH_USERNAME }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: ${{ secrets.SERVER_SSH_PORT }}
         script: |
-          cd "$SERVER_PROJECT_DIR" && docker compose -f docker-compose.prod.yml up -d --build --force-recreate
+          cd  /home/liveonit/projects/distritv && docker compose -f docker-compose.prod.yml up -d --build --force-recreate
