--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ services/mobileDistriTV/.idea/assetWizardSettings.xml
 services/mobileDistriTV/.idea/deploymentTargetDropDown.xml
 node_modules
 dist
+.worktrees
