--- a/.github/workflows/linter_frontend.yml
+++ b/.github/workflows/linter_frontend.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 18.x
+        cache: 'npm'
 
     - name: Install api dependencies
       run: yarn
