--- a/.github/workflows/test_and_prod_deploy.yml
+++ b/.github/workflows/test_and_prod_deploy.yml
@@ -56,6 +56,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 18.x
+        cache: 'npm'
 
     - name: Install dependencies
       run: yarn
