--- a/services/api/package.json
+++ b/services/api/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cron-parser": "^4.8.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
